--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using LinksShortening
 @using LinksShortening.Models
+@using LinksShortening.ViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
